--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -43,11 +43,13 @@ pre {
   .cm,    // Comment.Multiline
   .cp,    // Comment.Preproc
   .c1,    // Comment.Single
-  .cs {   // Comment.Special
-    color: #6272a4;
+  .cs {
+    // Comment.Special
+    color: #b4d388;
   }
 
-  .err {  // Error
+  .err {
+    // Error
     color: #ff5555;
     background-color: #282a36;
   }
@@ -56,8 +58,9 @@ pre {
   .kp,    // Keyword.Pseudo
   .kr,    // Keyword.Reserved
   .kt,    // Keyword.Type
-  .no {   // Name.Constant
-    color: #66d9ef;
+  .no {
+    // Name.Constant
+    color: #e98738;
   }
 
   .l,     // Literal 
@@ -66,12 +69,14 @@ pre {
   .mi,    // Literal.Number.Integer
   .mo,    // Literal.Number.Oct
   .se,    // Literal.String.Escape
-  .il {   // Literal.Number.Integer.Long
-    color: #ae81ff;
+  .il {
+    // Literal.Number.Integer.Long
+    color: #6897bb;
   }
 
   .p,     // Punctuation
-  .nx {   // Name.Other
+  .nx {
+    // Name.Other
     color: #f7f7f2;
   }
 
@@ -83,18 +88,21 @@ pre {
   .bp,    // Name.Builtin.Pseudo
   .vc,    // Name.Variable.Class
   .vg,    // Name.Variable.Global
-  .vi {   // Name.Variable.Instance
-    color: #50fa7b;
+  .vi {
+    // Name.Variable.Instance
+    color: #e98738;
   }
 
-  .nl {   // Name.Label
+  .nl {
+    // Name.Label
     color: #8be9fd;
   }
 
   .n,     // Name
   .nb,    // Name.Builtin
-  .m {    // Literal.Number
-    color: #bd93f9;
+  .m {
+    // Literal.Number
+    color: #e98738;
   }
 
   .nt,    // Name.Tag
@@ -102,15 +110,18 @@ pre {
   .kn,    // Keyword.Namespace
   .kd,    // Keyword.Declaration
   .o,     // Operator
-  .ow {   // Operator.Word
-    color: #ff79c6;
+  .ow {
+    // Operator.Word
+    color: #ffc400;
   }
 
-  .ge {   // Generic.Emph
+  .ge {
+    // Generic.Emph
     font-style: italic;
   }
 
-  .gs {   // Generic.Strong
+  .gs {
+    // Generic.Strong
     font-weight: bold;
   }
 
@@ -126,15 +137,17 @@ pre {
   .sr,     // Literal.String.Regex
   .s1,     // Literal.String.Single
   .ss,     // Literal.String.Symbol
-  .vglnk { // Link
-    color: #f1fa8c;
+  .vglnk {
+    // Link
+    color: #76af25;
   }
 
   .na,    // Name.Attribute
   .nc,    // Name.Class
   .nd,    // Name.Decorator
   .ne,    // Name.Exception
-  .nf {   // Name.Function
-    color: #50fa7b;
+  .nf {
+    // Name.Function
+    color: #ffc400;
   }
 }
