--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -77,7 +77,7 @@ pre {
   .p,     // Punctuation
   .nx {
     // Name.Other
-    color: #f7f7f2;
+    color: #e98738;
   }
 
   .ni,    // Name.Entity
