--- a/_sass/_highlight.scss
+++ b/_sass/_highlight.scss
@@ -77,7 +77,7 @@ pre {
   .p,     // Punctuation
   .nx {
     // Name.Other
-    color: #e98738;
+    color: #ffc400;
   }
 
   .ni,    // Name.Entity
@@ -102,7 +102,7 @@ pre {
   .nb,    // Name.Builtin
   .m {
     // Literal.Number
-    color: #e98738;
+    color: #ffc400;
   }
 
   .nt,    // Name.Tag
